--- a/index.html
+++ b/index.html
@@ -12,41 +12,30 @@
 </head>
 <body>
 	
-	<!--Header-->
+	<!--Navbar-->
+	<nav class="navbar navbar-default">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#collapsemenu">
+				</button>
+				<a href="#" class="navbar-brand">
+					<img class="hidden-sm hidden-xs" src="images/logos/uc.png" /> Unlimited Companies
+				</a>
+			</div> <!-- navbar header -->
+			<div id="collapsemenu" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="hidden-sm visible-md"><a href="index.html">Home</a></li>
+					<li><a href="html/about.html">About</a></li>
+					<li><a href="html/services.html">Services</a></li>
+					<li><a href="html/companies.html">Our Companies</a></li>
+					<li><a href="html/projects.html">Projects</a></li>
+					<li><a href="html/contactus.html">Contact Us</a></li>
+				</ul>
+			</div>
+		</div> <!-- container -->
+	</nav>
 
-	<header class="container">
-		<div class="row">
-			<section id="headimg" class="col-lg-5 col-md-5 col-sm-8 col-xs-10">
-				<div class="row">
-					<img src="images/logos/uc_name.png" class="col-lg-offset-2 col-lg-8 col-md-offset-0 col-md-12 col-sm-offset-0 col-sm-12 col-xs-offset-0 col-xs-12">
-				</div>
-			</section>
-
-			<section id="navbar" class="col-lg-7 col-md-7 col-sm-4 col-xs-1">
-				<div class="row">
-					<div class="col-xs-12">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#collapsemenu">
-								<span class="glyphicon glyphicon-menu-hamburger"></span>
-							</button>
-						</div>
-						<div id="collapsemenu" class="collapse navbar-collapse">
-							<ul class="nav navbar-nav navbar-right">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="html/about.html">About</a></li>
-								<li><a href="html/services.html">Services</a></li>
-								<li><a href="html/companies.html">Our Companies</a></li>
-								<li><a href="html/projects.html">Projects</a></li>
-								<li><a href="html/contactus.html">Contact Us</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
-		</div>
-	</header>
 	<div id="yellow"></div>
-
 
 	<!-- Carousel -->
 
