working on making home page content mobile friendly, still missing mobile proper placing of elements

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 
 	<section id="sec1" class="container w_background">
 		<div class="row">
-			<div class="col-xs-offset-1 col-xs-10">
+			<div class="col-sm-offset-1 col-sm-10 col-xs-offset-0 col-xs-12">
 				<div class="row">
-					<div id="uec" class="col-lg-offset-1 col-lg-3 col-md-offset-1 col-md-3 uec_image">
+					<div id="uec" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-4 col-xs-offset-3 col-xs-6 uec_image moveleft">
 						<img src="images/logos/UEC_Logo.png" />
 					</div>
-					<div class="col-lg-offset-1 col-lg-6 col-md-offset-1 col-md-6 uec_brands">
+					<div class="col-md-offset-1 col-md-6 col-sm-offset-0 col-sm-7 col-xs-offset-1 col-xs-10 uec_brands moveright">
 						<h3>Unlimited Electrical Contractors</h3> <hr />
 						<p> A Multi-Million Dollar Commercial Electrical Contractor Based In Pompano Beach, Florida, Since 1998. Flexible Enough For Timely Service Calls, Yet Capable Of Performing Multi-Million Dollar Residential and Commercial Contracts. </p>
 						<p>	We specialize in providing expertise in all stages of your project. Our expert designers can help you from developing your concept to picking out fixtures. Our project manager will make sure your project is delivered on time and on budget. </p>
@@ -87,14 +87,14 @@
 	</section>
 	<section id="sec2" class="container g_background">
 		<div class="row">
-			<div class="col-xs-offset-1 col-xs-10">
+			<div class="col-sm-offset-1 col-sm-10 col-xs-offset-0 col-xs-12">
 				<div class="row">
-					<div class="col-lg-offset-1 col-lg-6 uec_brands">
+					<div class="col-md-offset-1 col-md-6 col-sm-offset-0 col-sm-7 col-xs-offset-1 col-xs-10 uec_brands">
 						<h3>Unlimited Electronic Environments</h3> <hr />
 						<p> Unlimted Electronic Environments designs, consults and provides quality installations of integrated solutions that have defined the modern age of home theater, lighting and climate control, entertainment and communications. </p>
 						<p>These products deliver an array of applications and services beyond traditional control and automation functionality, such as multi-room audio and video multi-room lighting control, advanced digital audio and video processing, extremely flexible and scalable audio and video switching, digital media server and jukebox capabilities, telephone, and an array of integrated applications and services.</p>
 					</div>
-					<div id="uee" class="col-lg-offset-1 col-lg-3 uec_image">
+					<div id="uee" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-4 col-xs-offset-3 col-xs-6 uec_image moveright">
 						<img src="images/logos/UEE_Logo.png" />
 					</div>
 				</div>
@@ -103,12 +103,12 @@
 	</section>
 	<section id="sec3" class="container w_background">
 		<div class="row">
-			<div class="col-xs-offset-1 col-xs-10">
+			<div class="col-sm-offset-1 col-sm-10 col-xs-offset-0 col-xs-12">
 				<div class="row">
-					<div id="isuites" class="col-lg-offset-1 col-lg-3 uec_image">
+					<div id="isuites" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-4 col-xs-offset-3 col-xs-6 uec_image moveleft">
 						<img src="images/logos/iSuites-Logo.png" />
 					</div>
-					<div class="col-lg-offset-1 col-lg-6 uec_brands">
+					<div class="col-md-offset-1 col-md-6 col-sm-offset-0 col-sm-7 col-xs-offset-1 col-xs-10 uec_brands moveright">
 						<h3>iSuites</h3> <hr />
 						<p>iSuites is full-service integrator focused on bringing together leading technologies within the hospitality industry for an amazing in-room experience. Hoteliers and iSuites work together to choose the best in-room technology options, integrates those solutions into one user-friendly platform and provides the financing necessary to fund the project</p>
 						<p>iSuites focuses on common areas, meeting rooms and the overall guest room experience. Some of iSuites’ hotel projects include SLS Hotels/SBE Entertainment, Fontainebleau Hotel and Trump International.</p>
