--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 		<div class="row">
 			<div class="col-sm-offset-1 col-sm-10 col-xs-offset-0 col-xs-12">
 				<div class="row">
-					<div id="uec" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-4 col-xs-offset-3 col-xs-6 uec_image moveleft">
+					<div id="uec" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-5 col-xs-offset-3 col-xs-6 uec_image moveleft">
 						<img src="images/logos/UEC_Logo.png" />
 					</div>
-					<div class="col-md-offset-1 col-md-6 col-sm-offset-0 col-sm-7 col-xs-offset-1 col-xs-10 uec_brands moveright">
+					<div id="brand1" class="col-md-offset-1 col-md-6 col-sm-offset-0 col-sm-7 col-xs-offset-1 col-xs-10 uec_brands moveright">
 						<h3>Unlimited Electrical Contractors</h3> <hr />
-						<p> A Multi-Million Dollar Commercial Electrical Contractor Based In Pompano Beach, Florida, Since 1998. Flexible Enough For Timely Service Calls, Yet Capable Of Performing Multi-Million Dollar Residential and Commercial Contracts. </p>
+						<p> A multi-million dollar commercial electrical contractor based in Pompano Beach, Florida, since 1998. Flexible enough for timely service calls, yet capable of performing multi-million dollar residential and commercial contracts. </p>
 						<p>	We specialize in providing expertise in all stages of your project. Our expert designers can help you from developing your concept to picking out fixtures. Our project manager will make sure your project is delivered on time and on budget. </p>
 						<p> Our electricians will provide you with the industries best workmanship and service. Licensed (EC 0002084), Insured, And Bonded.</p>
 					</div>
@@ -87,14 +87,14 @@
 	</section>
 	<section id="sec2" class="container g_background">
 		<div class="row">
-			<div class="col-sm-offset-1 col-sm-10 col-xs-offset-0 col-xs-12">
+			<div class="col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
 				<div class="row">
-					<div class="col-md-offset-1 col-md-6 col-sm-offset-0 col-sm-7 col-xs-offset-1 col-xs-10 uec_brands">
+					<div id="brand2" class="col-md-offset-1 col-md-5 col-sm-offset-0 col-sm-7 col-xs-12 uec_brands moveleft">
 						<h3>Unlimited Electronic Environments</h3> <hr />
 						<p> Unlimted Electronic Environments designs, consults and provides quality installations of integrated solutions that have defined the modern age of home theater, lighting and climate control, entertainment and communications. </p>
 						<p>These products deliver an array of applications and services beyond traditional control and automation functionality, such as multi-room audio and video multi-room lighting control, advanced digital audio and video processing, extremely flexible and scalable audio and video switching, digital media server and jukebox capabilities, telephone, and an array of integrated applications and services.</p>
 					</div>
-					<div id="uee" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-4 col-xs-offset-3 col-xs-6 uec_image moveright">
+					<div id="uee" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-5 col-xs-offset-3 col-xs-6 uec_image moveright">
 						<img src="images/logos/UEE_Logo.png" />
 					</div>
 				</div>
@@ -108,7 +108,7 @@
 					<div id="isuites" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-4 col-xs-offset-3 col-xs-6 uec_image moveleft">
 						<img src="images/logos/iSuites-Logo.png" />
 					</div>
-					<div class="col-md-offset-1 col-md-6 col-sm-offset-0 col-sm-7 col-xs-offset-1 col-xs-10 uec_brands moveright">
+					<div id="brand3" class="col-md-offset-1 col-md-6 col-sm-offset-0 col-sm-7 col-xs-offset-1 col-xs-10 uec_brands moveright">
 						<h3>iSuites</h3> <hr />
 						<p>iSuites is full-service integrator focused on bringing together leading technologies within the hospitality industry for an amazing in-room experience. Hoteliers and iSuites work together to choose the best in-room technology options, integrates those solutions into one user-friendly platform and provides the financing necessary to fund the project</p>
 						<p>iSuites focuses on common areas, meeting rooms and the overall guest room experience. Some of iSuites’ hotel projects include SLS Hotels/SBE Entertainment, Fontainebleau Hotel and Trump International.</p>
