--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/about_styles.css">
 
   <link rel="shortcut icon" href="images/logos/uc.png">
   <title>Unlimited Companies</title>
@@ -24,7 +25,7 @@
 			</div> <!-- navbar header -->
 			<div id="collapsemenu" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="hidden-sm visible-md"><a href="index.html">Home</a></li>
+					<li class="hidden-sm visible-md visible-lg"><a href="index.html">Home</a></li>
 					<li><a href="html/about.html">About</a></li>
 					<li><a href="html/services.html">Services</a></li>
 					<li><a href="html/companies.html">Our Companies</a></li>
@@ -121,28 +122,30 @@
 
 	<!-- Footer -->
 
-	<footer class="container">
-		<div class="row">
-			<div class="col-lg-offset-5 col-lg-6">
-				<div class="row">
-					<ul class="list-unstyled col-lg-2">
-						<li class="invisible h5 list-unstyled"><a href="index.html">Home</a></li>
-						<li class="list-unstyled"><a href="index.html">Home</a></li>
-						<li class="list-unstyled"><a href="html/about.html">About</a></li>
-					</ul>
-					<ul class=" list-unstyled col-lg-4">
-						<li class="h5 list-unstyled">Current Projects</li>
-						<li class="list-unstyled"><a href="#">project name here</a></li>
-						<li class="list-unstyled"><a href="#">project name here</a></li>
-						<li class="list-unstyled"><a href="#">project name here</a></li>
-					</ul>
-					<ul class="list-unstyled col-lg-5">
-						<li class="h5 list-unstyled">Contact us</li>
-						<li class="list-unstyled"><span class="glyphicon glyphicon-phone-alt"></span> <p>954 481 8250</p></li>
-						<li class="list-unstyled"><span class="glyphicon glyphicon-print"></span><p>954 481 8249</p></li>
-						<li class="list-unstyled"><span class="glyphicon glyphicon-envelope"></span><p>salim@unlimitedcompanies.com</p></li>
-						<li class="list-unstyled"><span class="glyphicon glyphicon-map-marker"></span> <p>3500 Park Central Blvd. N. <br /> Pompano Beach, FL 33064</p></li>
-					</ul>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-offset-1 col-lg-6 col-md-offset-1 col-md-7 col-sm-offset-0 col-xs-offset-0 col-xs-12">
+					<div class="row">
+						<ul class="list-unstyled col-lg-2 col-md-2 col-sm-2">
+							<li class="list-unstyled h5">Links</li>
+							<li class="list-unstyled"><a href="index.html">Home</a></li>
+							<li class="list-unstyled"><a href="html/about.html">About</a></li>
+						</ul>
+						<ul class=" list-unstyled col-lg-4 col-md-4 col-sm-4">
+							<li class="h5 list-unstyled">Current Projects</li>
+							<li class="list-unstyled"><a href="#">project name here</a></li>
+							<li class="list-unstyled"><a href="#">project name here</a></li>
+							<li class="list-unstyled"><a href="#">project name here</a></li>
+						</ul>
+						<ul class="list-unstyled col-lg-5 col-md-5 col-sm-5">
+							<li class="h5 list-unstyled">Contact us</li>
+							<li class="list-unstyled"><span class="glyphicon glyphicon-phone-alt"></span> <p>954 481 8250</p></li>
+							<li class="list-unstyled"><span class="glyphicon glyphicon-print"></span><p>954 481 8249</p></li>
+							<li class="list-unstyled"><span class="glyphicon glyphicon-envelope"></span><p>salim@unlimitedcompanies.com</p></li>
+							<li class="list-unstyled"><span class="glyphicon glyphicon-map-marker"></span> <p>3500 Park Central Blvd. N. <br /> Pompano Beach, FL 33064</p></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
