about page has been completed; working on services page.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/about_styles.css">
 
   <link rel="shortcut icon" href="images/logos/uc.png">
   <title>Unlimited Companies</title>
@@ -14,7 +13,7 @@
 <body>
 	
 	<!--Navbar-->
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#collapsemenu">
@@ -25,7 +24,7 @@
 			</div> <!-- navbar header -->
 			<div id="collapsemenu" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="hidden-sm visible-md visible-lg"><a href="index.html">Home</a></li>
+					<li class="hidden-sm visible-xs visible-md visible-lg"><a href="index.html">Home</a></li>
 					<li><a href="html/about.html">About</a></li>
 					<li><a href="html/services.html">Services</a></li>
 					<li><a href="html/companies.html">Our Companies</a></li>
@@ -34,9 +33,10 @@
 				</ul>
 			</div>
 		</div> <!-- container -->
+		<div id="yellow"></div>
 	</nav>
 
-	<div id="yellow"></div>
+	
 
 	<!-- Carousel -->
 
@@ -73,10 +73,10 @@
 		<div class="row">
 			<div class="col-sm-offset-1 col-sm-10 col-xs-offset-0 col-xs-12">
 				<div class="row">
-					<div id="uec" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-5 col-xs-offset-3 col-xs-6 uec_image moveleft">
+					<div id="uec" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-5 col-xs-offset-3 col-xs-6 uc_image moveleft">
 						<img src="images/logos/UEC_Logo.png" />
 					</div>
-					<div id="brand1" class="col-md-offset-1 col-md-6 col-sm-offset-0 col-sm-7 col-xs-offset-1 col-xs-10 uec_brands moveright">
+					<div id="brand1" class="col-md-offset-1 col-md-6 col-sm-offset-0 col-sm-7 col-xs-offset-1 col-xs-10 uc_text moveright">
 						<h3>Unlimited Electrical Contractors</h3> <hr />
 						<p> A multi-million dollar commercial electrical contractor based in Pompano Beach, Florida, since 1998. Flexible enough for timely service calls, yet capable of performing multi-million dollar residential and commercial contracts. </p>
 						<p>	We specialize in providing expertise in all stages of your project. Our expert designers can help you from developing your concept to picking out fixtures. Our project manager will make sure your project is delivered on time and on budget. </p>
@@ -90,12 +90,12 @@
 		<div class="row">
 			<div class="col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
 				<div class="row">
-					<div id="brand2" class="col-md-offset-1 col-md-5 col-sm-offset-0 col-sm-7 col-xs-12 uec_brands moveleft">
+					<div id="brand2" class="col-md-offset-1 col-md-5 col-sm-offset-0 col-sm-7 col-xs-12 uc_text moveleft">
 						<h3>Unlimited Electronic Environments</h3> <hr />
 						<p> Unlimted Electronic Environments designs, consults and provides quality installations of integrated solutions that have defined the modern age of home theater, lighting and climate control, entertainment and communications. </p>
 						<p>These products deliver an array of applications and services beyond traditional control and automation functionality, such as multi-room audio and video multi-room lighting control, advanced digital audio and video processing, extremely flexible and scalable audio and video switching, digital media server and jukebox capabilities, telephone, and an array of integrated applications and services.</p>
 					</div>
-					<div id="uee" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-5 col-xs-offset-3 col-xs-6 uec_image moveright">
+					<div id="uee" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-5 col-xs-offset-3 col-xs-6 uc_image moveright">
 						<img src="images/logos/UEE_Logo.png" />
 					</div>
 				</div>
@@ -106,10 +106,10 @@
 		<div class="row">
 			<div class="col-sm-offset-1 col-sm-10 col-xs-offset-0 col-xs-12">
 				<div class="row">
-					<div id="isuites" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-4 col-xs-offset-3 col-xs-6 uec_image moveleft">
+					<div id="isuites" class="col-md-offset-1 col-md-3 col-sm-offset-0 col-sm-4 col-xs-offset-3 col-xs-6 uc_image moveleft">
 						<img src="images/logos/iSuites-Logo.png" />
 					</div>
-					<div id="brand3" class="col-md-offset-1 col-md-6 col-sm-offset-0 col-sm-7 col-xs-offset-1 col-xs-10 uec_brands moveright">
+					<div id="brand3" class="col-md-offset-1 col-md-6 col-sm-offset-0 col-sm-7 col-xs-offset-1 col-xs-10 uc_text moveright">
 						<h3>iSuites</h3> <hr />
 						<p>iSuites is full-service integrator focused on bringing together leading technologies within the hospitality industry for an amazing in-room experience. Hoteliers and iSuites work together to choose the best in-room technology options, integrates those solutions into one user-friendly platform and provides the financing necessary to fund the project</p>
 						<p>iSuites focuses on common areas, meeting rooms and the overall guest room experience. Some of iSuites’ hotel projects include SLS Hotels/SBE Entertainment, Fontainebleau Hotel and Trump International.</p>
