--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../css/bootstrap.css">
   <link rel="stylesheet" href="../css/styles.css">
-  <link rel="stylesheet" href="../css/about_styles.css">
 
   <link rel="shortcut icon" href="../images/logos/uc.png">
   <title>Unlimited Companies</title>
@@ -14,7 +13,7 @@
 <body>
 	
 	<!--Navbar-->
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#collapsemenu">
@@ -25,7 +24,7 @@
 			</div> <!-- navbar header -->
 			<div id="collapsemenu" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="hidden-sm visible-md visible-lg"><a href="../index.html">Home</a></li>
+					<li class="hidden-sm visible-xs visible-md visible-lg"><a href="../index.html">Home</a></li>
 					<li><a href="../html/about.html">About</a></li>
 					<li><a href="../html/services.html">Services</a></li>
 					<li><a href="../html/companies.html">Our Companies</a></li>
@@ -34,35 +33,47 @@
 				</ul>
 			</div>
 		</div> <!-- container -->
+		<div id="yellow"></div>
 	</nav>
-
-	<div id="yellow"></div>
 
 	<!-- Content -->
 
-	<div id="aboutpic">
+	<div class="uc_image">
 		<img src="../images/sized/companybuilding.png">
 	</div>
 
-	<div class="container">
+	<div class="container toppad">
 		<div class="row">
-			<div class="col-xs-6">
-				<h3>About</h3>
-				<p>Unlimited Companies is composed of three dynamic South Florida businesses. They are Unlimited Electrical Contractors, Unlimited Custom Pools and Spa’s and Unlimited Electronic Environments. These three corporations were brought together under one umbrella by the owner, Mitchell R. Pagerey. </p>
-				<ul>
-					<li>Unlimited Electrical Contractors engages in commercial building and residential projects and provides prompt electric repair and trouble shooting services for large and small customers. </li>
-					<li>Unlimited Electronic Environments develops sophisticated controls for lighting, air conditioning, sound, video surveillance, alarms and amazing theaters for homes and businesses.</li>
-					<li>Unlimited Custom Pools & Spas specializes in designing and building backyard pool and spa installations that are carefully customized to suit each customer’s needs and dreams.</li>
-				</ul>
+			<div class="col-lg-offset-1 col-lg-10 col-xs-offset-0 col-xm-12">
+				<div class="row">
+					<div class="col-xs-12 uc_text">
+						<h3>Our Company and President</h3> <hr />
+						<p>Our President and founder Mitch Pagerey was born in Pittsfield Massachusetts and relocated to South Florida in 1989. He began his electrical career as a piece worker on various types of electrical installations. In April of 1999, Mitch had achieved his State Master Electrical Contractors status and started up a small company Unlimited Electrical Contractors Corporation. He began by doing residential and commercial projects as well as any service work available.</p>
+						<p>In May of 2001 Mitch staying focused on his business plan procured a new 10,000 foot square facility to house the Unlimited Companies Operation. Mitch continues to be hands on involved with the day-to-day operation with his eyes on the future.</p>
+					</div>
+					<div class="col-xs-12 uc_text">
+						<h3>About</h3> <hr />
+						<p>Unlimited Companies is composed of three dynamic South Florida businesses. They are Unlimited Electrical Contractors, Unlimited Custom Pools and Spa’s and Unlimited Electronic Environments. These three corporations were brought together under one umbrella by the owner, Mitchell R. Pagerey. </p>
+						<ul>
+							<li>Unlimited Electrical Contractors engages in commercial building and residential projects and provides prompt electric repair and trouble shooting services for large and small customers. </li>
+							<li>Unlimited Electronic Environments develops sophisticated controls for lighting, air conditioning, sound, video surveillance, alarms and amazing theaters for homes and businesses.</li>
+							<li>Unlimited Custom Pools & Spas specializes in designing and building backyard pool and spa installations that are carefully customized to suit each customer’s needs and dreams.</li>
+						</ul>
+					</div>
+					<div id="mission" class="col-xs-12 uc_text">
+						<h3>Our Mission</h3> <hr />
+						<p>Create products at the highest of standards<br>through means that utilize the latest technologies, top skilled labor, and above all, our work ethic;<br>“Whatever it takes”</p>
+					</div>
+					<div class="col-xs-12 uc_text">
+						<h3>Career Oportunities</h3> <hr />
+						<p><strong>Immediate Opening:</strong> Unlimited Electrical Contractors, Corp., located in Pompano Beach, Florida seeks full time Project Engineer with Master Degree and 3 yr. exp. Plan, design, and oversee electrical construction projects. </p>
+						<p>Fax your resume to 954-481-8249 or e-mail it to jobs@unlimitedcompanies.com; </p>
+						<p><strong>Attn: Tony Sprovieri, Controller</strong></p>
+						<button type="button" class="btn btn-default">Job Application</button>
+					</div>
+				</div>
 			</div>
-			<div class="col-xs-6">
-				<h3>Career Oportunities</h3>
-				<p><strong>Immediate Opening:</strong> Unlimited Electrical Contractors, Corp., located in Pompano Beach, Florida seeks full time Project Engineer with Master Degree and 3 yr. exp. Plan, design, and oversee electrical construction projects. </p>
-				<p>Fax your resume to 954-481-8249 or e-mail it to jobs@unlimitedcompanies.com; </p>
-				<p><strong>Attn: Tony Sprovieri, Controller</strong></p>
-				<button type="button" class="btn btn-default">Job Application</button>
-			</div>
-		</div>		
+		</div>
 	</div>
 
 
