in the middle of fixing picture sizes and their places in the page

--- a/html/services.html
+++ b/html/services.html
@@ -54,16 +54,72 @@
 						<p>Custom residential construction. Unlike many firms we value this type of work as much as any other. This type of construction would allow an owner or contractor to gain the greatest overall value utilizing all of our firms. We provide electrical design assistance along with lighting consulting, audio visual wireless access design and installation. When combined with custom Pool design and installation We offer incredible values along with adherence to a strict no change order policy.</p>
 					</div>
 					<div class="col-xs-12 uc_text">
-						<h3>Our Customers</h3>
+						<h3>Our Customers</h3> <hr />
 					</div>
-					<div class="col-sm-4">
-						
+					<div class="col-sm-4 uc_image">
+						<img src="../images/customers/rcc_associates.jpg">
+						<p>RCC Associates</p>
+						<p>255 Jim Moran Blvd., Deerfield Beach, FL 33442 <br /> 954-429-3700</p>
+					</div>
+					<div class="col-sm-4 uc_image">
+						<img src="../images/customers/coastal.jpg">
+						<p>Coastal Construction</p>
+						<p>5959 Blue Lagoon Drive, Suite 200, Miami, Florida 33126 <br />305-559-4900 </p>
+					</div>
+					<div class="col-sm-4 uc_image">
+						<img src="../images/customers/moriarty.jpg">
+						<p>John Moriarty & Associates of Florida, Inc.</p>
+						<p>1942 Tyler Street Hollywood, Florida 33020 <br /> 954-920-8550</p>
+					</div>
+					<div class="col-sm-4 uc_image">
+						<img src="../images/customers/gt_mcdonald.png">
+						<p>GT McDonald Enterprises</p>
+						<p>400 S State Road 7, Plantation, FL 33317 <br />954-584-3060 </p>
+					</div>
+					<div class="col-sm-4 uc_image">
+						<img src="../images/customers/beauchamp.png">
+						<p>Beauchamp Construction</p>
+						<p>2100 Ponce de Leon Blvd, Suite 825 Coral Gables, FL 33134 <br />305-445-0819 </p>
+					</div>
+					<div class="col-sm-4 uc_image">
+						<img src="../images/customers/rossco.jpg">
+						<p>Rossco Construction</p>
+						<p>170 East Boca Raton Road, Suite 2 Boca Raton, FL 33432 <br />561-395-6905 </p>
+					</div>
+					<div class="col-sm-4 uc_image">
+						<img src="../images/customers/suffolk.jpg">
+						<p>Suffolk Construction</p>
+						<p>One Harvard Circle, Suite 100 West Palm Beach, FL 33409 <br />561-282-3000 - 561-832-6775</p>
+					</div>
+					<div class="col-sm-4 uc_image">
+						<img src="../images/customers/glenewinkel.png">
+						<p>Glenewinkel Construction Company</p>
+						<p>3104 S. Andrews Avenue, Ft. Lauderdale, Florida 33316 <br />954-990-8091 </p>
+					</div>
+					<div class="col-sm-4 uc_image">
+						<img src="../images/customers/moss.png">
+						<p>Moss Construction</p>
+						<p>2101 N. Andrews Avenue, Fort Lauderdale, Florida 33311 <br />954-524-5678 </p>
+					</div>
+					<div class="col-sm-4 uc_image">
+						<img src="../images/customers/city_construction.png">
+						<p>City Construction</p>
+						<p>2727 SW 26th Avenue Coconut Grove, Florida 33133 <br />305-448-1118 </p>
+					</div>
+					<div class="col-sm-4 uc_image">
+						<img src="../images/customers/to_better_days.png">
+						<p>To Better Days Development</p>
+						<p>183 Madison Avenue, Suite 1601 New York, New York 10016 <br />212-382-2575 </p>
+					</div>
+					<div class="col-sm-4 uc_image">
+						<img src="../images/customers/gates.png">
+						<p>Gates</p>
+						<p>27599 Riverview Center Blvd, Suite 205, Bonita Springs, FL 34134 <br />239-593-3777 </p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
 
 
 	<!-- Footer -->
