--- a/html/companies.html
+++ b/html/companies.html
@@ -1,85 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/styles.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="../css/bootstrap.css">
+	<link rel="stylesheet" href="../css/styles.css">
 
-  <link rel="shortcut icon" href="images/uc.png">
-  <title>Unlimited Companies</title>
+	<link rel="shortcut icon" href="../images/logos/uc.png">
+	<title>Unlimited Companies</title>
 </head>
 <body>
 	
-	<!--Header-->
+	<!--Navbar-->
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#collapsemenu">
+				</button>
+				<a href="../index.html" class="navbar-brand">
+					<img class="hidden-sm hidden-xs" src="../images/logos/uc.png" /> Unlimited Companies
+				</a>
+			</div> <!-- navbar header -->
+			<div id="collapsemenu" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="hidden-sm visible-xs visible-md visible-lg"><a href="../index.html">Home</a></li>
+					<li><a href="../html/about.html">About</a></li>
+					<li><a href="../html/services.html">Services</a></li>
+					<li><a href="../html/companies.html">Our Companies</a></li>
+					<li><a href="../html/projects.html">Projects</a></li>
+					<li><a href="../html/contactus.html">Contact Us</a></li>
+				</ul>
+			</div>
+		</div> <!-- container -->
+		<div id="yellow"></div>
+	</nav>
 
-	<header class="container">
-		<div id="header_name_wrap" class="row">
-			<section class="col-lg-6">
-				<div class="row">
-					<img src="images/logos/uc.png" class="col-lg-offset-2 col-lg-1">
-					<p class="col-lg-9">UNLIMITED COMPANIES</p>
-				</div>
-			</section>
-
-			<section id="navbar" class="col-lg-6">
-				<div class="row">
-					<div class="col-lg-offset-2 col-lg-8">
-						<ul class="nav navbar-nav">
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="services.html">Services</a></li>
-							<li><a href="companies.html">Our Companies</a></li>
-							<li><a href="projects.html">Current Projects</a></li>
-							<li><a href="contactus.html">Contact Us</a></li>
-						</ul>
-					</div>
-				</div>
-			</section>
-		</div>
-		
-		
-	</header>
-	<div id="yellow"></div>
-
-
-
+	<!-- Content -->
 
 
 
 
 	<!-- Footer -->
 
-	<footer class="container">
-		<div class="row">
-			<div class="col-lg-offset-6 col-lg-6">
-				<div class="row">
-					<ul class="list-unstyled col-lg-2">
-						<li class="invisible h5 list-unstyled"><a href="../index.html">Home</a></li>
-						<li class="list-unstyled"><a href="../index.html">Home</a></li>
-						<li class="list-unstyled"><a href="about.html">About</a></li>
-					</ul>
-					<ul class=" list-unstyled col-lg-3">
-						<li class="h5 list-unstyled">Current Projects</li>
-						<li class="list-unstyled"><a href="#">project name here</a></li>
-						<li class="list-unstyled"><a href="#">project name here</a></li>
-						<li class="list-unstyled"><a href="#">project name here</a></li>
-					</ul>
-					<ul class="list-unstyled col-lg-4">
-						<li class="h5 list-unstyled">Contact us</li>
-						<li class="list-unstyled"><span class="glyphicon glyphicon-phone-alt"></span> <p>954 481 8250</p></li>
-						<li class="list-unstyled"><span class="glyphicon glyphicon-print"></span><p>954 481 8249</p></li>
-						<li class="list-unstyled"><span class="glyphicon glyphicon-envelope"></span><p>salim@unlimitedcompanies.com</p></li>
-						<li class="list-unstyled"><span class="glyphicon glyphicon-map-marker"></span> <p>3500 Park Central Blvd. N. <br /> Pompano Beach, FL 33064</p></li>
-					</ul>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-offset-1 col-lg-6 col-md-offset-1 col-md-7 col-sm-offset-0 col-xs-offset-0 col-xs-12">
+					<div class="row">
+						<ul class="list-unstyled col-lg-2 col-md-2 col-sm-2">
+							<li class="list-unstyled h5">Links</li>
+							<li class="list-unstyled"><a href="../index.html">Home</a></li>
+							<li class="list-unstyled"><a href="../html/about.html">About</a></li>
+						</ul>
+						<ul class=" list-unstyled col-lg-4 col-md-4 col-sm-4">
+							<li class="h5 list-unstyled">Current Projects</li>
+							<li class="list-unstyled"><a href="#">project name here</a></li>
+							<li class="list-unstyled"><a href="#">project name here</a></li>
+							<li class="list-unstyled"><a href="#">project name here</a></li>
+						</ul>
+						<ul class="list-unstyled col-lg-5 col-md-5 col-sm-5">
+							<li class="h5 list-unstyled">Contact us</li>
+							<li class="list-unstyled"><span class="glyphicon glyphicon-phone-alt"></span> <p>954 481 8250</p></li>
+							<li class="list-unstyled"><span class="glyphicon glyphicon-print"></span><p>954 481 8249</p></li>
+							<li class="list-unstyled"><span class="glyphicon glyphicon-envelope"></span><p>salim@unlimitedcompanies.com</p></li>
+							<li class="list-unstyled"><span class="glyphicon glyphicon-map-marker"></span> <p>3500 Park Central Blvd. N. <br /> Pompano Beach, FL 33064</p></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="js/bootstrap.js"></script>
-	<script src="js/script.js"></script>
+	<script src="../js/bootstrap.js"></script>
 </body>
 </html>
