--- a/html/services.html
+++ b/html/services.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../css/bootstrap.css">
-  <link rel="stylesheet" href="../css/styles.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="../css/bootstrap.css">
+	<link rel="stylesheet" href="../css/styles.css">
+	<link rel="stylesheet" href="../css/services_css.css">
 
-  <link rel="shortcut icon" href="../images/logos/uc.png">
-  <title>Unlimited Companies</title>
+	<link rel="shortcut icon" href="../images/logos/uc.png">
+	<title>Unlimited Companies</title>
 </head>
 <body>
 	
@@ -44,7 +45,7 @@
 
 	<div class="container toppad">
 		<div class="row">
-			<div class="col-lg-offset-1 col-lg-10 col-xs-offset-0 col-xm-12">
+			<div class="col-md-offset-1 col-md-10 col-sm-offset-0 col-sm-12 col-xs-offset-0 col-xm-12">
 				<div class="row">
 					<div class="col-xs-12 uc_text">
 						<h3>Services</h3> <hr />
@@ -56,69 +57,72 @@
 					<div class="col-xs-12 uc_text">
 						<h3>Our Customers</h3> <hr />
 					</div>
-					<div class="col-sm-4 uc_image">
-						<img src="../images/customers/rcc_associates.jpg">
-						<p>RCC Associates</p>
-						<p>255 Jim Moran Blvd., Deerfield Beach, FL 33442 <br /> 954-429-3700</p>
+					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
+						<img src="../images/customers/rcc_associates.png">
+						<p class="h5">RCC Associates</p>
+						<p>255 Jim Moran Blvd<br /> Deerfield Beach, FL 33442 <br /> 954-429-3700</p>
 					</div>
-					<div class="col-sm-4 uc_image">
-						<img src="../images/customers/coastal.jpg">
-						<p>Coastal Construction</p>
-						<p>5959 Blue Lagoon Drive, Suite 200, Miami, Florida 33126 <br />305-559-4900 </p>
+					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
+						<img src="../images/customers/coastal.png">
+						<p class="h5">Coastal Construction</p>
+						<p>5959 Blue Lagoon Drive, Suite 200<br /> Miami, Florida 33126 <br />305-559-4900 </p>
 					</div>
-					<div class="col-sm-4 uc_image">
-						<img src="../images/customers/moriarty.jpg">
-						<p>John Moriarty & Associates of Florida, Inc.</p>
-						<p>1942 Tyler Street Hollywood, Florida 33020 <br /> 954-920-8550</p>
+					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
+						<img src="../images/customers/moriarty.png">
+						<p class="h5">John Moriarty &#38; Associates of Florida, Inc.</p>
+						<p>1942 Tyler Street<br /> Hollywood, Florida 33020 <br /> 954-920-8550</p>
 					</div>
-					<div class="col-sm-4 uc_image">
+					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
 						<img src="../images/customers/gt_mcdonald.png">
-						<p>GT McDonald Enterprises</p>
-						<p>400 S State Road 7, Plantation, FL 33317 <br />954-584-3060 </p>
+						<p class="h5">GT McDonald Enterprises</p>
+						<p>400 S State Road 7<br /> Plantation, FL 33317 <br />954-584-3060 </p>
 					</div>
-					<div class="col-sm-4 uc_image">
+					<div class="clearfix visible-sm"></div>
+					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
 						<img src="../images/customers/beauchamp.png">
-						<p>Beauchamp Construction</p>
-						<p>2100 Ponce de Leon Blvd, Suite 825 Coral Gables, FL 33134 <br />305-445-0819 </p>
+						<p class="h5">Beauchamp Construction</p>
+						<p>2100 Ponce de Leon Blvd, Suite 825<br /> Coral Gables, FL 33134 <br />305-445-0819 </p>
 					</div>
-					<div class="col-sm-4 uc_image">
-						<img src="../images/customers/rossco.jpg">
-						<p>Rossco Construction</p>
-						<p>170 East Boca Raton Road, Suite 2 Boca Raton, FL 33432 <br />561-395-6905 </p>
+					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
+						<img src="../images/customers/rossco.png">
+						<p class="h5">Rossco Construction</p>
+						<p>170 East Boca Raton Road, Suite 2<br /> Boca Raton, FL 33432 <br />561-395-6905 </p>
 					</div>
-					<div class="col-sm-4 uc_image">
-						<img src="../images/customers/suffolk.jpg">
-						<p>Suffolk Construction</p>
-						<p>One Harvard Circle, Suite 100 West Palm Beach, FL 33409 <br />561-282-3000 - 561-832-6775</p>
+					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
+						<img src="../images/customers/suffolk.png">
+						<p class="h5">Suffolk Construction</p>
+						<p>One Harvard Circle, Suite 100<br /> West Palm Beach, FL 33409 <br />561-282-3000 - 561-832-6775</p>
 					</div>
-					<div class="col-sm-4 uc_image">
+					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
 						<img src="../images/customers/glenewinkel.png">
-						<p>Glenewinkel Construction Company</p>
-						<p>3104 S. Andrews Avenue, Ft. Lauderdale, Florida 33316 <br />954-990-8091 </p>
+						<p class="h5">Glenewinkel Construction Company</p>
+						<p>3104 S. Andrews Avenue<br /> Ft. Lauderdale, Florida 33316 <br />954-990-8091 </p>
 					</div>
-					<div class="col-sm-4 uc_image">
+					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
 						<img src="../images/customers/moss.png">
-						<p>Moss Construction</p>
-						<p>2101 N. Andrews Avenue, Fort Lauderdale, Florida 33311 <br />954-524-5678 </p>
+						<p class="h5">Moss Construction</p>
+						<p>2101 N. Andrews Avenue<br /> Fort Lauderdale, Florida 33311 <br />954-524-5678 </p>
 					</div>
-					<div class="col-sm-4 uc_image">
+					<div class="clearfix visible-lg visible-md"></div>
+					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
 						<img src="../images/customers/city_construction.png">
-						<p>City Construction</p>
-						<p>2727 SW 26th Avenue Coconut Grove, Florida 33133 <br />305-448-1118 </p>
+						<p class="h5">City Construction</p>
+						<p>2727 SW 26th Avenue<br /> Coconut Grove, Florida 33133 <br />305-448-1118 </p>
 					</div>
-					<div class="col-sm-4 uc_image">
+					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
 						<img src="../images/customers/to_better_days.png">
-						<p>To Better Days Development</p>
-						<p>183 Madison Avenue, Suite 1601 New York, New York 10016 <br />212-382-2575 </p>
+						<p class="h5">To Better Days Development</p>
+						<p>183 Madison Avenue, Suite 1601<br /> New York, New York 10016 <br />212-382-2575 </p>
 					</div>
-					<div class="col-sm-4 uc_image">
+					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
 						<img src="../images/customers/gates.png">
-						<p>Gates</p>
-						<p>27599 Riverview Center Blvd, Suite 205, Bonita Springs, FL 34134 <br />239-593-3777 </p>
+						<p class="h5">Gates</p>
+						<p>27599 Riverview Center Blvd, Suite 205<br /> Bonita Springs, FL 34134 <br />239-593-3777 </p>
 					</div>
-				</div>
+				</div> <!-- row -->
 			</div>
-		</div>
+		</div> <!-- row -->
+		<div class="spacing"></div>
 	</div>
 
 
