working on contact us page trying to get the map working

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../css/bootstrap.css">
 	<link rel="stylesheet" href="../css/styles.css">
-	<link rel="stylesheet" href="../css/services_css.css">
 
 	<link rel="shortcut icon" href="../images/logos/uc.png">
 	<title>Unlimited Companies</title>
@@ -39,7 +38,35 @@
 
 	<!-- Content -->
 
-
+	<div id="contact" class="container">
+		<div class="row">
+			<div class="h3 col-xs-12">
+				<p>Contact Us</p>
+			</div>
+			<ul class="list-unstyled col-sm-4">
+				<li class="h4 list-unstyled">Contact us</li>
+				<li class="list-unstyled"><span class="glyphicon glyphicon-phone-alt"></span> <p>954 481 8250</p></li>
+				<li class="list-unstyled"><span class="glyphicon glyphicon-print"></span><p>954 481 8249</p></li>
+				<li class="list-unstyled"><span class="glyphicon glyphicon-envelope"></span><p>salim@unlimitedcompanies.com</p></li>
+				<li class="list-unstyled"><span class="glyphicon glyphicon-map-marker"></span> <p>3500 Park Central Blvd. N. <br /> Pompano Beach, FL 33064</p></li>
+			</ul>
+			<ul class="col-sm-4">
+				<li class="h4 list-unstyled">Operations Manager</li>
+				<li class="list-unstyled">Salim Shehadeh</li>
+				<li class="list-unstyled">772-882-2121</li>
+				<li class="list-unstyled">salim@unlimitedcompanies.com</li>
+			</ul>
+			<ul class="col-sm-4">
+				<li class="h4 list-unstyled">Office Hours of Operations</li>
+				<li class="list-unstyled">Monday through Friday 8:00 AM to 5:00 PM</li>
+			</ul>
+			<div class="col-xs-12">
+				<p class="h3">Office Location</p>
+				<div id="map"></div>
+			</div>
+		</div>		
+	</div>
+	
 
 
 	<!-- Footer -->
@@ -72,8 +99,10 @@
 			</div>
 		</div>
 	</footer>
-
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="../js/bootstrap.js"></script>
+	<script type="text/javascript" src="../js/script.js"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAZ5wcuMoJwmegUXAhg9xBfPVxNQUDtMWs&callback=initMap"></script>
 </body>
 </html>
