All pages have been completed except for the projects

--- a/html/companies.html
+++ b/html/companies.html
@@ -27,8 +27,27 @@
 					<li class="hidden-sm visible-xs visible-md visible-lg"><a href="../index.html">Home</a></li>
 					<li><a href="../html/about.html">About</a></li>
 					<li><a href="../html/services.html">Services</a></li>
-					<li><a href="../html/companies.html">Our Companies</a></li>
-					<li><a href="../html/projects.html">Projects</a></li>
+					<li>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Companies
+							<span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							<li><a href="../html/uec.html">Unlimited Electrical Contractors</a></li>
+							<li><a href="../html/uee.html">Unlimited Electronic Environments</a></li>
+							<li><a href="http://isuiteshotel.com/">iSuites</a></li>
+						</ul>
+
+					</li>
+					<li>
+						<a href="html/projects.html" class="dropdown-toggle" data-toggle="dropdown">Projects
+							<span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Project1</a></li>
+							<li><a href="#">Project2</a></li>
+							<li><a href="#">Project3</a></li>
+						</ul>
+					</li>
 					<li><a href="../html/contactus.html">Contact Us</a></li>
 				</ul>
 			</div>
