--- a/html/uee.html
+++ b/html/uee.html
@@ -45,7 +45,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="#">Project1</a></li>
 							<li><a href="#">Project2</a></li>
-							<li><a href="#">Project3</a></li>
+							<li><a href="#">Project3</a></li>							
 						</ul>
 					</li>
 					<li><a href="../html/contactus.html">Contact Us</a></li>
@@ -55,45 +55,47 @@
 		<div id="yellow"></div>
 	</nav>
 
+
 	<!-- Content -->
 
-	<div class="uc_image navspace">
-		<img src="../images/sized/companybuilding.png">
-	</div>
-
-	<div class="container toppad">
+	<div class="container navspace">
 		<div class="row">
-			<div class="col-lg-offset-1 col-lg-10 col-xs-offset-0 col-xm-12">
-				<div class="row">
-					<div class="col-xs-12 uc_text">
-						<h3>Our Company and President</h3> <hr />
-						<p>Our President and founder Mitch Pagerey was born in Pittsfield Massachusetts and relocated to South Florida in 1989. He began his electrical career as a piece worker on various types of electrical installations. In April of 1999, Mitch had achieved his State Master Electrical Contractors status and started up a small company Unlimited Electrical Contractors Corporation. He began by doing residential and commercial projects as well as any service work available.</p>
-						<p>In May of 2001 Mitch staying focused on his business plan procured a new 10,000 foot square facility to house the Unlimited Companies Operation. Mitch continues to be hands on involved with the day-to-day operation with his eyes on the future.</p>
-					</div>
-					<div class="col-xs-12 uc_text">
-						<h3>About</h3> <hr />
-						<p>Unlimited Companies is composed of three dynamic South Florida businesses. They are Unlimited Electrical Contractors, Unlimited Custom Pools and Spa’s and Unlimited Electronic Environments. These three corporations were brought together under one umbrella by the owner, Mitchell R. Pagerey. </p>
-						<ul>
-							<li>Unlimited Electrical Contractors engages in commercial building and residential projects and provides prompt electric repair and trouble shooting services for large and small customers. </li>
-							<li>Unlimited Electronic Environments develops sophisticated controls for lighting, air conditioning, sound, video surveillance, alarms and amazing theaters for homes and businesses.</li>
-							<li>Unlimited Custom Pools & Spas specializes in designing and building backyard pool and spa installations that are carefully customized to suit each customer’s needs and dreams.</li>
-						</ul>
-					</div>
-					<div id="mission" class="col-xs-12 uc_text">
-						<h3>Our Mission</h3> <hr />
-						<p>Create products at the highest of standards<br>through means that utilize the latest technologies, top skilled labor, and above all, our work ethic;<br>“Whatever it takes”</p>
-					</div>
-					<div class="col-xs-12 uc_text">
-						<h3>Career Oportunities</h3> <hr />
-						<p><strong>Immediate Opening:</strong> Unlimited Electrical Contractors, Corp., located in Pompano Beach, Florida seeks full time Project Engineer with Master Degree and 3 yr. exp. Plan, design, and oversee electrical construction projects. </p>
-						<p>Fax your resume to 954-481-8249 or e-mail it to jobs@unlimitedcompanies.com; </p>
-						<p><strong>Attn: Tony Sprovieri, Controller</strong></p>
-						<button type="button" class="btn btn-default">Job Application</button>
-					</div>
-				</div>
+			<div id="uec_logo" class=" col-xs-offset-1 col-xs-6 col-md-4">
+				<img src="../images/logos/UEE_Logo.png">
 			</div>
-		</div>
-	</div>
+			<div class="col-xs-12 uc_text">				
+				<p>Unlimited Electronic Environments creates advanced home theaters that set the highest standard for excellence. Entertainment, light, room temperature, humidity and multi-level communication capacities are developed in collaboration with the owner’s needs and wishes. A primary achievement is always ease of use and high functionality.</p>
+				<p>In short, the theater experience we provide is exhilarating and the controls we design to harness complex electronics are a pleasure to use.</p>
+				<p>The features of our systems allow for a wide range of functions that transcend anything previously available: sound for many rooms (as many as you wish), lighting controls not just in the home theater but inside and outside the home or office, state-of-the-art sound and video management that incorporate every thing from telephone to jukebox utilities.</p>
+				<p>Standing first in the field of creative use of modern electronics in the home, Unlimited Electronic Environments delivers the highest and best utilization of state-of-the-art touch pads and and hand held remotes.</p>
+				<p>Our commitment to excellence extends into the Marine industry. We design and install sophisticated audio/video systems from full automation on Mega Yachts down to center console fishing boats.</p>
+			</div>
+			<div class="col-xs-12 uc_text">
+				<div class="h3">Our Mission</div> <hr />
+				<ul>
+					<li>Develop superior systems that are dependable, affordable and able to seamlessly grow as new applications become desirable and needed.</li>
+					<li>Meld sophisticated software and hardware into one integrated piece that is easy to operate.</li>
+					<li>Give clients a full understanding of how to easily and simply use an integrated system, including home security features.</li>
+				</ul>
+			</div>
+			<div class="col-xs-12 uc_text">
+				<div class="h3">Our Values</div> <hr />
+				<ul>
+					<li>The best components and design at the best value.</li>
+					<li>Create systems that are easily adaptable to future advances.</li>
+					<li>Make it all operator friendly.</li>
+				</ul>
+			</div>
+			<div class="col-xs-12 uc_text">
+				<div class="h3">Our Certifications</div>
+				<p>Programmer Michel St. Amand has accomplished a Crestron Certification. This is a top honor in our indusrty. Unlimited Electronic Environments continues to expand it’s high quality service in the South Florida lighting controls industry by certifying it’s professionals. Michel St Amand received Commercial Lighting Controls CLC-C certification during training classes in West Palm Beach, FL, and is now authorized to design, install and maintain Crestron Lighting Control Systems.</p>
+				<p>The intensive three-day curriculum teaches Crestron Lighting Control System design, installation and programming. The class provides students with an overview of Crestron commercial lighting control systems, including centralized, distributed, room building and enterprise solutions. The Crestron Lighting Control Software provides system configuration and programming demonstrations.</p>				
+			</div>
+			<div class="col-xs-offset-4 col-xs-4 uc_image">
+				<img src="../images/logos/Certified-Programmer-Logo-1024x498.jpg">
+			</div>
+		</div> <!-- row -->
+	</div> <!-- container -->
 
 
 	<!-- Footer -->
@@ -128,6 +130,7 @@
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="js/bootstrap.js"></script>
 	<script src="../js/bootstrap.js"></script>
 </body>
 </html>
