Fixed details found

--- a/html/companies.html
+++ b/html/companies.html
@@ -67,10 +67,12 @@
 			<div class="row">
 				<div class="col-lg-offset-1 col-lg-6 col-md-offset-1 col-md-7 col-sm-offset-0 col-xs-offset-0 col-xs-12">
 					<div class="row">
-						<ul class="list-unstyled col-lg-2 col-md-2 col-sm-2">
+						<ul class="list-unstyled col-sm-3">
 							<li class="list-unstyled h5">Links</li>
 							<li class="list-unstyled"><a href="../index.html">Home</a></li>
 							<li class="list-unstyled"><a href="../html/about.html">About</a></li>
+							<li class="list-unstyled"><a href="../html/services.html">Services</a></li>
+							<li class="list-unstyled"><a href="../html/contactus.html">Contact us</a></li>
 						</ul>
 						<ul class=" list-unstyled col-lg-4 col-md-4 col-sm-4">
 							<li class="h5 list-unstyled">Current Projects</li>
