--- a/html/contactus.html
+++ b/html/contactus.html
@@ -59,28 +59,28 @@
 
 	<div id="contact" class="container">
 		<div class="row">
-			<div class="h3 col-xs-12">
+			<div class="h3 col-xs-offset-1 col-sm-10 col-xs-12">
 				<p>Contact Us</p>
 			</div>
-			<ul class="list-unstyled col-sm-4">
-				<li class="h4 list-unstyled">Contact us</li>
+			<ul class="col-sm-4 col-xs-12 uc_text">
+				<li class="h4 list-unstyled">Contact us</li> <hr />
 				<li class="list-unstyled"><span class="glyphicon glyphicon-phone-alt"></span> <p>954 481 8250</p></li>
 				<li class="list-unstyled"><span class="glyphicon glyphicon-print"></span><p>954 481 8249</p></li>
 				<li class="list-unstyled"><span class="glyphicon glyphicon-envelope"></span><p>salim@unlimitedcompanies.com</p></li>
 				<li class="list-unstyled"><span class="glyphicon glyphicon-map-marker"></span> <p>3500 Park Central Blvd. N. <br /> Pompano Beach, FL 33064</p></li>
 			</ul>
-			<ul class="col-sm-4">
-				<li class="h4 list-unstyled">Operations Manager</li>
+			<ul class="col-sm-4 col-xs-12 uc_text">
+				<li class="h4 list-unstyled">Operations Manager</li>  <hr />
 				<li class="list-unstyled">Salim Shehadeh</li>
 				<li class="list-unstyled">772-882-2121</li>
 				<li class="list-unstyled">salim@unlimitedcompanies.com</li>
 			</ul>
-			<ul class="col-sm-4">
-				<li class="h4 list-unstyled">Office Hours of Operations</li>
+			<ul class="col-sm-4 col-xs-12 uc_text">
+				<li class="h4 list-unstyled">Office Hours of Operations</li>  <hr />
 				<li class="list-unstyled">Monday through Friday 8:00 AM to 5:00 PM</li>
 			</ul>
 			<div class="col-xs-12">
-				<p class="h3">Office Location</p>
+				<p class="h3 uc_text">Office Location</p>
 				<div id="map"></div>
 			</div>
 		</div>
@@ -94,10 +94,12 @@
 			<div class="row">
 				<div class="col-lg-offset-1 col-lg-6 col-md-offset-1 col-md-7 col-sm-offset-0 col-xs-offset-0 col-xs-12">
 					<div class="row">
-						<ul class="list-unstyled col-lg-2 col-md-2 col-sm-2">
+						<ul class="list-unstyled col-sm-3">
 							<li class="list-unstyled h5">Links</li>
 							<li class="list-unstyled"><a href="../index.html">Home</a></li>
 							<li class="list-unstyled"><a href="../html/about.html">About</a></li>
+							<li class="list-unstyled"><a href="../html/services.html">Services</a></li>
+							<li class="list-unstyled"><a href="../html/contactus.html">Contact us</a></li>
 						</ul>
 						<ul class=" list-unstyled col-lg-4 col-md-4 col-sm-4">
 							<li class="h5 list-unstyled">Current Projects</li>
@@ -119,8 +121,9 @@
 	</footer>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyAZ5wcuMoJwmegUXAhg9xBfPVxNQUDtMWs"></script>
 	<script src="../js/bootstrap.js"></script>
 	<script type="text/javascript" src="../js/script.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyAZ5wcuMoJwmegUXAhg9xBfPVxNQUDtMWs&callback=ucMap"></script>
+	<script type="text/javascript" src="../js/map.js"></script>
 </body>
 </html>
