--- a/html/uee.html
+++ b/html/uee.html
@@ -36,7 +36,6 @@
 							<li><a href="../html/uee.html">Unlimited Electronic Environments</a></li>
 							<li><a href="http://isuiteshotel.com/">iSuites</a></li>
 						</ul>
-
 					</li>
 					<li>
 						<a href="html/projects.html" class="dropdown-toggle" data-toggle="dropdown">Projects
@@ -60,10 +59,10 @@
 
 	<div class="container navspace">
 		<div class="row">
-			<div id="uec_logo" class=" col-xs-offset-1 col-xs-6 col-md-4">
+			<div id="uec_logo" class="col-xs-offset-1 col-xs-6 col-md-4">
 				<img src="../images/logos/UEE_Logo.png">
 			</div>
-			<div class="col-xs-12 uc_text">				
+			<div class="col-xs-12 uc_text">
 				<p>Unlimited Electronic Environments creates advanced home theaters that set the highest standard for excellence. Entertainment, light, room temperature, humidity and multi-level communication capacities are developed in collaboration with the owner’s needs and wishes. A primary achievement is always ease of use and high functionality.</p>
 				<p>In short, the theater experience we provide is exhilarating and the controls we design to harness complex electronics are a pleasure to use.</p>
 				<p>The features of our systems allow for a wide range of functions that transcend anything previously available: sound for many rooms (as many as you wish), lighting controls not just in the home theater but inside and outside the home or office, state-of-the-art sound and video management that incorporate every thing from telephone to jukebox utilities.</p>
@@ -87,14 +86,15 @@
 				</ul>
 			</div>
 			<div class="col-xs-12 uc_text">
-				<div class="h3">Our Certifications</div>
+				<div class="h3">Our Certifications</div> <hr />
 				<p>Programmer Michel St. Amand has accomplished a Crestron Certification. This is a top honor in our indusrty. Unlimited Electronic Environments continues to expand it’s high quality service in the South Florida lighting controls industry by certifying it’s professionals. Michel St Amand received Commercial Lighting Controls CLC-C certification during training classes in West Palm Beach, FL, and is now authorized to design, install and maintain Crestron Lighting Control Systems.</p>
-				<p>The intensive three-day curriculum teaches Crestron Lighting Control System design, installation and programming. The class provides students with an overview of Crestron commercial lighting control systems, including centralized, distributed, room building and enterprise solutions. The Crestron Lighting Control Software provides system configuration and programming demonstrations.</p>				
+				<p>The intensive three-day curriculum teaches Crestron Lighting Control System design, installation and programming. The class provides students with an overview of Crestron commercial lighting control systems, including centralized, distributed, room building and enterprise solutions. The Crestron Lighting Control Software provides system configuration and programming demonstrations.</p>
 			</div>
 			<div class="col-xs-offset-4 col-xs-4 uc_image">
 				<img src="../images/logos/Certified-Programmer-Logo-1024x498.jpg">
 			</div>
 		</div> <!-- row -->
+		<div class="spacing"></div>
 	</div> <!-- container -->
 
 
@@ -105,10 +105,12 @@
 			<div class="row">
 				<div class="col-lg-offset-1 col-lg-6 col-md-offset-1 col-md-7 col-sm-offset-0 col-xs-offset-0 col-xs-12">
 					<div class="row">
-						<ul class="list-unstyled col-lg-2 col-md-2 col-sm-2">
+						<ul class="list-unstyled col-sm-3">
 							<li class="list-unstyled h5">Links</li>
 							<li class="list-unstyled"><a href="../index.html">Home</a></li>
 							<li class="list-unstyled"><a href="../html/about.html">About</a></li>
+							<li class="list-unstyled"><a href="../html/services.html">Services</a></li>
+							<li class="list-unstyled"><a href="../html/contactus.html">Contact us</a></li>
 						</ul>
 						<ul class=" list-unstyled col-lg-4 col-md-4 col-sm-4">
 							<li class="h5 list-unstyled">Current Projects</li>
@@ -130,7 +132,6 @@
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="js/bootstrap.js"></script>
 	<script src="../js/bootstrap.js"></script>
 </body>
 </html>
