--- a/html/about.html
+++ b/html/about.html
@@ -90,10 +90,11 @@
 						<p><strong>Attn: Tony Sprovieri, Controller</strong></p>
 						<button type="button" class="btn btn-default">Job Application</button>
 					</div>
-				</div>
+				</div> <!-- row -->
 			</div>
-		</div>
-	</div>
+		</div> <!-- row -->
+		<div class="spacing"></div>
+	</div> <!-- container -->
 
 
 	<!-- Footer -->
@@ -103,18 +104,20 @@
 			<div class="row">
 				<div class="col-lg-offset-1 col-lg-6 col-md-offset-1 col-md-7 col-sm-offset-0 col-xs-offset-0 col-xs-12">
 					<div class="row">
-						<ul class="list-unstyled col-lg-2 col-md-2 col-sm-2">
+						<ul class="list-unstyled col-sm-3">
 							<li class="list-unstyled h5">Links</li>
 							<li class="list-unstyled"><a href="../index.html">Home</a></li>
 							<li class="list-unstyled"><a href="../html/about.html">About</a></li>
+							<li class="list-unstyled"><a href="../html/services.html">Services</a></li>
+							<li class="list-unstyled"><a href="../html/contactus.html">Contact us</a></li>
 						</ul>
-						<ul class=" list-unstyled col-lg-4 col-md-4 col-sm-4">
+						<ul class=" list-unstyled col-sm-4">
 							<li class="h5 list-unstyled">Current Projects</li>
 							<li class="list-unstyled"><a href="#">project name here</a></li>
 							<li class="list-unstyled"><a href="#">project name here</a></li>
 							<li class="list-unstyled"><a href="#">project name here</a></li>
 						</ul>
-						<ul class="list-unstyled col-lg-5 col-md-5 col-sm-5">
+						<ul class="list-unstyled col-sm-5">
 							<li class="h5 list-unstyled">Contact us</li>
 							<li class="list-unstyled"><span class="glyphicon glyphicon-phone-alt"></span> <p>954 481 8250</p></li>
 							<li class="list-unstyled"><span class="glyphicon glyphicon-print"></span><p>954 481 8249</p></li>
