--- a/html/services.html
+++ b/html/services.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../css/bootstrap.css">
 	<link rel="stylesheet" href="../css/styles.css">
-	<link rel="stylesheet" href="../css/services_css.css">
 
 	<link rel="shortcut icon" href="../images/logos/uc.png">
 	<title>Unlimited Companies</title>
@@ -62,19 +61,19 @@
 		<img src="../images/sized/companybuilding.png">
 	</div>
 
-	<div class="container toppad">
+	<div id="cust" class="container toppad">
 		<div class="row">
 			<div class="col-md-offset-1 col-md-10 col-sm-offset-0 col-sm-12 col-xs-offset-0 col-xm-12">
 				<div class="row">
 					<div class="col-xs-12 uc_text">
-						<h3>Services</h3> <hr />
+						<div class="h3">Services</div> <hr />
 						<p>The project types we offer the most value are: Large Hospitality new construction, renovation, alterations, including design assist, IT consulting. The iSuites division provides in-room electronic environments combined with mobile amenities application to provide guest experiences beyond anything currently available.</p>
 						<p>Large commercial electrical construction projects that require high levels of project management, design assistance, CAD/BIM modeling. The more systems required the better overall value we can offer through our A/V division and associated manufacture partnerships. We are capable of providing all electrical systems performed in-house including design and programming.</p>
 						<p>Restaraunt construction, design assistance and fast track construction. Over 50 project completed. Much like the commercial and hospitality work, the more complex the better the value we can offer.</p>
 						<p>Custom residential construction. Unlike many firms we value this type of work as much as any other. This type of construction would allow an owner or contractor to gain the greatest overall value utilizing all of our firms. We provide electrical design assistance along with lighting consulting, audio visual wireless access design and installation. When combined with custom Pool design and installation We offer incredible values along with adherence to a strict no change order policy.</p>
 					</div>
 					<div class="col-xs-12 uc_text">
-						<h3>Our Customers</h3> <hr />
+						<div class="h3">Our Customers</div> <hr />
 					</div>
 					<div class="col-md-4 col-sm-offset-0 col-sm-6 col-xs-offset-2 col-xs-8 uc_image">
 						<img src="../images/customers/rcc_associates.png">
@@ -152,10 +151,12 @@
 			<div class="row">
 				<div class="col-lg-offset-1 col-lg-6 col-md-offset-1 col-md-7 col-sm-offset-0 col-xs-offset-0 col-xs-12">
 					<div class="row">
-						<ul class="list-unstyled col-lg-2 col-md-2 col-sm-2">
+						<ul class="list-unstyled col-sm-3">
 							<li class="list-unstyled h5">Links</li>
 							<li class="list-unstyled"><a href="../index.html">Home</a></li>
 							<li class="list-unstyled"><a href="../html/about.html">About</a></li>
+							<li class="list-unstyled"><a href="../html/services.html">Services</a></li>
+							<li class="list-unstyled"><a href="../html/contactus.html">Contact us</a></li>
 						</ul>
 						<ul class=" list-unstyled col-lg-4 col-md-4 col-sm-4">
 							<li class="h5 list-unstyled">Current Projects</li>
