--- a/html/uec.html
+++ b/html/uec.html
@@ -36,7 +36,6 @@
 							<li><a href="../html/uee.html">Unlimited Electronic Environments</a></li>
 							<li><a href="http://isuiteshotel.com/">iSuites</a></li>
 						</ul>
-
 					</li>
 					<li>
 						<a href="html/projects.html" class="dropdown-toggle" data-toggle="dropdown">Projects
@@ -45,7 +44,7 @@
 						<ul class="dropdown-menu">
 							<li><a href="#">Project1</a></li>
 							<li><a href="#">Project2</a></li>
-							<li><a href="#">Project3</a></li>
+							<li><a href="#">Project3</a></li>							
 						</ul>
 					</li>
 					<li><a href="../html/contactus.html">Contact Us</a></li>
@@ -142,10 +141,12 @@
 			<div class="row">
 				<div class="col-lg-offset-1 col-lg-6 col-md-offset-1 col-md-7 col-sm-offset-0 col-xs-offset-0 col-xs-12">
 					<div class="row">
-						<ul class="list-unstyled col-lg-2 col-md-2 col-sm-2">
+						<ul class="list-unstyled col-sm-3">
 							<li class="list-unstyled h5">Links</li>
 							<li class="list-unstyled"><a href="../index.html">Home</a></li>
 							<li class="list-unstyled"><a href="../html/about.html">About</a></li>
+							<li class="list-unstyled"><a href="../html/services.html">Services</a></li>
+							<li class="list-unstyled"><a href="../html/contactus.html">Contact us</a></li>
 						</ul>
 						<ul class=" list-unstyled col-lg-4 col-md-4 col-sm-4">
 							<li class="h5 list-unstyled">Current Projects</li>
@@ -167,7 +168,6 @@
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="js/bootstrap.js"></script>
 	<script src="../js/bootstrap.js"></script>
 </body>
 </html>
