Finished with the three different models to choose the design, waiting for Management decision

--- a/v1.2/index.html
+++ b/v1.2/index.html
@@ -16,14 +16,16 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
-			<div class="navbar-header logos">
+			<div id="navbar_head" class="navbar-header">
 				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#collapsemenu">
 				</button>
-				<a href="index.html" class="logos hidden-lg hidden-md hidden-sm visible-xs"><img class="col-xs-10" src="images/logos/UC_3logo.png" /></a>
+				<div class="uc_image">
+					<a id="uc_logo" href="index.html" class="hidden-lg hidden-md hidden-sm visible-xs"><img class="col-xs-8" src="images/logos/UC_3logo.png" /></a>	
+				</div>
 			</div> <!-- navbar header -->
 			<div id="collapsemenu" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="col-lg-6 col-md-5 col-sm-4 logos"><a href="index.html"><img src="images/logos/UC_3logo.png" /></a></li>
+					<li class="col-lg-6 col-md-5 col-sm-4"><a href="index.html"><img src="images/logos/UC_3logo.png" /></a></li>
 					<li class="hidden-sm visible-xs visible-md visible-lg"><a href="index.html">Home</a></li>
 					<li><a href="html/about.html">About</a></li>
 					<li><a href="html/services.html">Services</a></li>
@@ -57,7 +59,6 @@
 	</nav>
 
 	
-
 	<!-- Carousel -->
 
 	<div id="homepics" class="carousel slide navspace" data-ride="carousel">
