--- a/v1.2/html/projects.html
+++ b/v1.2/html/projects.html
@@ -14,33 +14,50 @@
 	
 	<!--Header-->
 
-	<header class="container">
-		<div id="header_name_wrap" class="row">
-			<section class="col-lg-6">
-				<div class="row">
-					<img src="images/logos/uc.png" class="col-lg-offset-2 col-lg-1">
-					<p class="col-lg-9">UNLIMITED COMPANIES</p>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<div id="navbar_head" class="navbar-header">
+				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#collapsemenu">
+				</button>
+				<div class="uc_image">
+					<a id="uc_logo" href="../index.html" class="hidden-lg hidden-md hidden-sm visible-xs"><img class="col-xs-8" src="../images/logos/UC_3logo.png" /></a>	
 				</div>
-			</section>
-
-			<section id="navbar" class="col-lg-6">
-				<div class="row">
-					<div class="col-lg-offset-2 col-lg-8">
-						<ul class="nav navbar-nav">
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="services.html">Services</a></li>
-							<li><a href="companies.html">Our Companies</a></li>
-							<li><a href="projects.html">Current Projects</a></li>
-							<li><a href="contactus.html">Contact Us</a></li>
+			</div> <!-- navbar header -->
+			<div id="collapsemenu" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="col-lg-6 col-md-5 col-sm-4"><a href="../index.html"><img src="../images/logos/UC_3logo.png" /></a></li>
+					<li class="hidden-sm visible-xs visible-md visible-lg"><a href="../index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="services.html">Services</a></li>
+					<li>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Companies
+							<span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							<li><a href="uec.html">Unlimited Electrical Contractors</a></li>
+							<li><a href="uee.html">Unlimited Electronic Environments</a></li>
+							<li><a href="http://isuiteshotel.com/">iSuites</a></li>
 						</ul>
-					</div>
-				</div>
-			</section>
-		</div>
-		
-		
-	</header>
+
+					</li>
+					<li>
+						<a href="projects.html" class="dropdown-toggle" data-toggle="dropdown">Projects
+							<span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							<li><a href="#">Project1</a></li>
+							<li><a href="#">Project2</a></li>
+							<li><a href="#">Project3</a></li>							
+						</ul>
+					</li>
+					<li><a href="contactus.html">Contact Us</a></li>
+				</ul>
+			</div>
+				
+			</div> <!-- container -->
+		<div id="yellow"></div>
+	</nav>
+
 	<div id="yellow"></div>
 
 
